
Besure to also join the discord: https://discord.gg/wv6huJAwEv

NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update information!

+ Means something was added
^ Means something was upgraded or changed
- Means something was removed
------------------------------------------------------------
Dec, 31
Happy New Year!!!
+ Added Adventure Drivers
------------------------------------------------------------
Dec, 30
+ Added Aquapark Slides
+ Added Surviv.io
+ Added Starve.io
+ Added Shellshockers
------------------------------------------------------------
Dec, 29
+ Added Knife Master
+ Added Pixel Gun Survival
------------------------------------------------------------
Dec, 28
+ Added Boxing Random
^ Added more reviews
------------------------------------------------------------
Dec, 27
+ Added Stick Duel Battle
+ Added Sky Car Stunt
------------------------------------------------------------
Dec, 26
+ Added Bitlife
+ Added Angry Sharks
------------------------------------------------------------
Dec, 25
+ Added Noob Steve Parkour
+ Added Handshakes
^ Fix game number count
^ Added more splash texts
------------------------------------------------------------
Dec, 24
^ Added lazy loading to the review images
^ Added more reviews
^ Added more splash texts
------------------------------------------------------------
Dec, 23
+ Added Tiny Fishing
^ Fixed a error with the main site saying it is out of date
------------------------------------------------------------
Dec, 22
+ Added Hungry Lamu
------------------------------------------------------------
Dec, 21
+ Added Stick Archers
------------------------------------------------------------
Dec, 20
+ Added Stick Merge
------------------------------------------------------------
Dec, 19
+ Added Basketbros
+ Added a update checker
^ Added more reviews
------------------------------------------------------------
Dec, 18
+ Added Subway Surfers New York
+ Added AlienHub banner