@@ -1,13 +1,8 @@
 <html>
-  <!-- Mirrored from ubg77.github.io/game131022/adventure-drivers/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Jan 2023 00:28:35 GMT -->
-  <!-- Added by HTTrack -->
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <!-- /Added by HTTrack -->
   <head>
     <meta charset="UTF-8" />
     <title>Adventure Drivers</title>
-    <!--<link rel="manifest" href="manifest.json" />-->
-    <!--<link rel="shortcut icon" sizes="256x256" href="icon-256.png" />-->
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -15,7 +10,6 @@
     <meta name="HandheldFriendly" content="true" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="icon" href="favicon.png" type="image/x-icon" />
-    <script type="text/javascript" src="https://ubg77.github.io/cloak.js"></script>
     <meta name="robots" content="noindex,nofollow" />
     <style>
       html,
@@ -59,7 +53,7 @@
     <script src="pixi.min.js" type="text/javascript"></script>
     <script src="perf.min.js" type="text/javascript"></script>
     <script src="howler.min.js" type="text/javascript"></script>
-
+    <script src="/js/main.js"></script>
     <script src="poki-sdk.js"></script>
     <style>
       .pokiSdkContainer {
