@@ -39,6 +39,7 @@
 
     <div id="game">
       <script src="js/game.js"></script>
+      <script src="/js/main.js"></script>
     </div>
     <div class="font_preload" style="opacity: 0;">
       <span style="font-family: 'gameFont', 'Arial', normal;"></span>
