@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>eaglercraft | 3kh0</title>
+    <title>Eaglercraft | 3kh0</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <script type="text/javascript" src="classes.js"></script>
     <script type="text/javascript" src="eagswebrtc.js"></script>
-    <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="https://arc.io/widget.min.js#eRPHFgiC"></script>
     <script type="text/javascript">
       if (document.location.href.startsWith("file:")) {
         alert(
