@@ -91,5 +91,6 @@
       };
       document.body.appendChild(script);
     </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
