@@ -22,7 +22,7 @@
       }
     </script>
     <script src="box2d.wasm.js"></script>
-    <!--<script src="/js/main.js"></script>-->
+    <script src="/js/main.js"></script>
     <noscript>
       <div id="notSupportedWrap">
         <h2 id="notSupportedTitle">This content requires JavaScript</h2>
