@@ -13,12 +13,12 @@
         <title>Tiny Fishing</title>
         <meta name="description" content="Tiny Fishing is a fishing game where you have to upgrade your gear to get bigger fish.">
         <meta name="robots" content="noindex,nofollow" />
-    <script type="text/javascript" src="/cloak.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: #0;
-              color:#cccccc;
+              background: #000;
+              color: #cccccc;
               margin: 0px;
               padding: 0px;
               border: 0px;
