@@ -17,6 +17,10 @@ NOTE: Make sure you refresh the page! Sometimes you will not get the lastest upd
 ^ Means something was upgraded or changed
 - Means something was removed
 ------------------------------------------------------------
+Jan, 4, 2023
+It is now 2023! Woohoo!
+^ Added the site script to all games
+------------------------------------------------------------
 Dec, 31
 Happy New Year!!!
 + Added Adventure Drivers
